# file_extension_reading

./: CMakeLists.txt  README.md  \  a.out  capture_1.pcapng  file.cpp  file.hpp  file_extension_reading  file_reading.cpp  general_funcs.h  main.cpp  parser  perf.sh  png.cpp  png.hpp  png_test.cpp  test.sh
src/: file.cpp  file.hpp  file_r.h  general_funcs.h  main.cpp
